<resources>
    <string name="app_name">JustJava</string>
    <string name="hello_android">Hello Android</string>
    <string name="welcome_to_android">Welcome To Android</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="name_Label">Name:</string>
    <string name="total_Label">Total:</string>
    <string name="choice_Label">Choice:</string>
    <string name="order_summary_label"> YOUR ORDER SUMMARY</string>
    <string name="tick_your_choice">Tick your choice:</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity:</string>
    <string name="choice_value"></string>
    <string name="quantity_value"></string>
    <string name="Rs">\u20B9</string>
    <string name="total_value">%1$s %2$d</string>
    <string name="name_value"></string>
    <string name="send_invoice">SEND INVOICE</string>
</resources>
